@@ -2,3 +2,5 @@ Message 10HmaX-0005vi-00 has been removed
 Message 10HmaZ-0005vi-00 has been removed
 Message 10HmbB-0005vi-00 has been removed
 Message 10HmbD-0005vi-00 has been removed
+Message 10HmbI-0005vi-00 has been removed
+Message 10HmbJ-0005vi-00 has been removed
